# adhoc-server

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  PreLoad.cmake  README.md  dependencies.cmake  http.mjs  index.mjs  opcodes.mjs  operations.mjs  packets.mjs  tcp.mjs  users.mjs  util.mjs
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  functions.cmake  install-config.cmake  install-dependencies.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake  version.h.in
cmake/error_code/: error_code.c.in  error_code.h.in  nt.c  posix.c
source/: error_code.c  lib.c  main.c  main.cpp  server.h  server.nt.c  server.nt.h  server.posix.c
source/server/: detail.h  detail.nt.h  error_code.c  nt.c  posix.c
test/: CMakeLists.txt
test/source/: adhoc-server_test.c
